fixed component vertical alignment

--- a/QR-code-card.css
+++ b/QR-code-card.css
@@ -1,6 +1,10 @@
 body {
 	background-color: hsl(212, 45%, 89%);
 	font-family: Outfit;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
 }
 
 .card-container {
@@ -8,10 +12,12 @@ body {
 	display: flex;
 	align-items: center;
 	flex-direction: column;
-	width: 25%;
+	width: 20%;
 	background-color: hsl(0, 0%, 100%);
 	border-radius: 1rem;
 	text-align: center;
+	justify-content: center;
+	align-items: center;
 }
 
 .card {
